# dim

./: Dockerfile.backend  docker-compose.dev.yml
dim-auth/: Cargo.toml
dim-auth/src/: lib.rs
dim-core/: Cargo.toml
dim-core/src/: build.rs
dim-database/: Cargo.toml  build.rs
dim-database/src/: episode.rs  progress.rs
dim-database/src/tests/: genre_tests.rs  library_tests.rs  media_tests.rs  mediafile_tests.rs  tv_tests.rs  user_tests.rs
dim-web/: Cargo.toml  build.rs
dim-web/src/: lib.rs  middleware.rs
dim-web/src/routes/: auth.rs  statik.rs
ui/: Dockerfile.frontend  package.json
ui/src/: index.tsx  setupProxy.js
ui/src/Components/: ImageLoad.tsx  SimpleSearch.tsx  WS.tsx  unfocusableButton.tsx
ui/src/Components/AdvancedSearch/: Index.tsx  Suggestions.tsx  SuggestionsHook.tsx  TagHook.tsx
ui/src/Components/Header/: Index.scss  Index.tsx
ui/src/Components/MediaCarousel/: Index.scss  Index.tsx
ui/src/Components/Sidebar/: Search.tsx  Toggle.tsx
ui/src/Components/Sidebar/Profile/: Image.tsx
ui/src/Layouts/: MainLayout.tsx
ui/src/Modals/: ConfirmationBox.tsx  Index.tsx  InputConfirmationBox.tsx
ui/src/Modals/NewLibrary/: DirSelection.tsx
ui/src/Pages/Auth/: Field.tsx  LoginBtn.tsx
ui/src/Pages/Dashboard/Banners/: Banner.scss  Banner.tsx  Index.tsx
ui/src/Pages/Dashboard/CardList/: Index.tsx
ui/src/Pages/Preferences/Playback/: EnableSsa.tsx
ui/src/Themes/: Default.js
