[package]
name = "dim-web"
version = "0.1.0"
edition = "2021"

[features]
default = []
embed_ui = []

[dependencies]
dim-database = { path = "../dim-database" }
dim-utils = { path = "../dim-utils" }
dim-events = { path = "../dim-events" }
dim-core = { path = "../dim-core" }
dim-extern-api = { path = "../dim-extern-api" }
rust-embed = "5.9.0"

nightfall = { git = "https://github.com/Dusk-Labs/nightfall", tag = "0.3.12-rc4", default-features = false, features = [
    "cuda",
    "ssa_transmux",
] }

axum = { version = "0.7", features = ["ws", "http2", "macros", "multipart"] }
axum-extra = { version = "0.9.0", features = ["cookie"] }
cfg-if = "1.0.0"
chrono = { version = "0.4.19", features = ["serde"] }
displaydoc = "0.2.3"
dominant_color = "0.3.0"
futures = "0.3.14"
fuzzy-matcher = "0.3.7"
http = "1.0"
hyper = "1.0"
tower-http = { version = "0.5.2", features = ["full"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "fs"] }
serde_json = "1.0"
image = "0.24.3"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
uuid = { version = "1.2.2", features = ["v4"] }
tokio-stream = "0.1.12"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
once_cell = "1.8"

[build-dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
